# axum-web

./: .env.example  .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: lib.rs  post.rs  sea_orm_active_enums.rs  serde_time.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231221_175829_create_post_table.rs  m20231221_180214_create_user_table.rs
src/: api_doc.rs  app.rs  exception.rs  logger.rs  main.rs  swagger.rs
src/core/: config.rs  exception.rs  logger.rs  mod.rs  state.rs
src/dtos/: mod.rs  post_dtos.rs  user_dtos.rs
src/events/: handlers.rs
src/extensions/: mod.rs  user_execution.rs
src/extractors/: body_extractor.rs  mod.rs  param_extractor.rs  query_extractor.rs
src/guards/: cookie_guard.rs  jwt_guard.rs  mod.rs
src/middlewares/: cookie_auth.rs  current_user.rs  jwt_auth.rs  mod.rs
src/routes/: exception.rs  make_resp.rs  mod.rs  post.rs  upload.rs  user.rs
src/swagger/: mod.rs  post_schemas.rs  user_schemas.rs
src/utils/: exception.rs  extractor.rs  http_resp.rs  jwt.rs  mod.rs  schema.rs
