[package]
name = "axum-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-macros = "0.5"
axum_typed_multipart = "0.16"
bb8 = "0.9"
bb8-redis = "0.21"
bcrypt = "0.17"
dotenvy = { git = "https://github.com/allan2/dotenvy", features = ["macros"] }
entity = { path = "entity" }
futures = "0.3"
jsonwebtoken = "9"
migration = { path = "migration" }
redis = { version = "0.30", features = ["connection-manager", "tokio-comp"] }
sea-orm = { version = "1", features = [
	"debug-print",
	"sqlx-mysql",
	"runtime-tokio-native-tls",
	"macros",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-cookies = "0.11"
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["cors", "request-id", "trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
utoipa-axum = "0.2"
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.20", features = ["derive"] }
