[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.19"
sea-orm = { version = "~2.0.0-rc.38" }
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
